--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,6 +7,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
         />
+        <title><%= context.title %></title>
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     </head>
     <body>
