--- a/p__index.chunk.css
+++ b/p__index.chunk.css
@@ -1,1 +1,1 @@
-.normal___HWRKS{font-family:Georgia,sans-serif;margin-top:4em;text-align:center}.welcome___Hx9vE{height:328px;background:url(/MathJaxPlayground/static/yay.44dd3333.jpg) no-repeat center 0;background-size:388px 328px}.list___1QtXr{font-size:1.2em;margin-top:1.8em;list-style:none;line-height:1.5em}.list___1QtXr code{background:#f7f7f7}
+.context___3phCo{padding:20px}.editor___3rAQZ{height:-webkit-fill-available}.textarea___aPaMK{background-color:#faebd7;height:-webkit-fill-available!important}.display___3TJ5V{background-color:#faebd7;height:-webkit-fill-available}
