--- a/p__index.chunk.css
+++ b/p__index.chunk.css
@@ -1,1 +1,1 @@
-.context___3phCo{padding:20px}.editor___3rAQZ{height:-webkit-fill-available}.textarea___aPaMK{background-color:#faebd7;height:-webkit-fill-available!important}.display___3TJ5V{background-color:#faebd7;height:-webkit-fill-available}
+.context___3phCo{padding:16px}.textarea___aPaMK{margin-top:8px;margin-bottom:8px;background-color:#faebd7;resize:none;height:72vh!important}.display___3TJ5V{margin-top:8px;margin-bottom:8px;background-color:#faebd7;height:72vh!important}@media (max-width:768px){.textarea___aPaMK{height:36vh!important}.display___3TJ5V{height:36vh!important}}
