--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -8,7 +8,7 @@
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
         />
         <title><%= context.title %></title>
-        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="/MathJaxPlayground/favicon.ico" type="image/x-icon" />
     </head>
     <body>
         <noscript>Sorry, we need js to run correctly!</noscript>
