--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,23 @@
+::-webkit-scrollbar
+{
+  width: 10px;
+  height: 10px
+}
+
+::-webkit-scrollbar-track
+{
+  box-shadow:0px 1px 3px rgba(0,0,0,0.3) inset;
+  border-radius: 10px;
+  background-color: #ddd;
+}
+
+::-webkit-scrollbar-thumb
+{
+  box-shadow:0px 1px 3px rgba(0,0,0,0.3) inset;
+  border-radius: 10px;
+  background-color: #aaa;
+}
+
 html, body, #root {
   height: 100%;
   width: 100%;
