--- a/layouts__index.chunk.css
+++ b/layouts__index.chunk.css
@@ -1,1 +1,2 @@
-.normal___YzYMc{font-family:Georgia,sans-serif;text-align:center}.title___1eHup{font-size:2.5rem;font-weight:400;letter-spacing:-1px;padding:.6em 0;margin:0}
+@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700);
+.title___1eHup{font-size:2.5rem;font-weight:400;letter-spacing:-1px;padding:.6em 0;margin:0;text-align:center;font-family:Playfair Display,georgia,serif;font-style:italic}
