--- a/umi.css
+++ b/umi.css
@@ -1,2 +1,2 @@
 
-#root,body,html{height:100%;width:100%}body{margin:0}
+::-webkit-scrollbar{width:5px;height:5px}::-webkit-scrollbar-track{box-shadow:inset 0 1px 3px rgba(0,0,0,.3);border-radius:5px;background-color:#ddd}::-webkit-scrollbar-thumb{box-shadow:inset 0 1px 3px rgba(0,0,0,.3);border-radius:5px;background-color:#aaa}#root,body,html{height:100%;width:100%}body{margin:0}
