--- a/src/global.css
+++ b/src/global.css
@@ -1,28 +1,49 @@
-::-webkit-scrollbar
-{
+::-webkit-scrollbar {
   width: 5px;
-  height: 5px
+  height: 5px;
 }
 
-::-webkit-scrollbar-track
-{
-  box-shadow:0px 1px 3px rgba(0,0,0,0.3) inset;
+::-webkit-scrollbar-track {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3) inset;
   border-radius: 5px;
   background-color: #ddd;
 }
 
-::-webkit-scrollbar-thumb
-{
-  box-shadow:0px 1px 3px rgba(0,0,0,0.3) inset;
+::-webkit-scrollbar-thumb {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3) inset;
   border-radius: 5px;
   background-color: #aaa;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
   width: 100%;
 }
 
 body {
   margin: 0;
+}
+
+.yRemoteSelection {
+  background-color: rgb(250, 129, 0, 0.5);
+}
+
+.yRemoteSelectionHead {
+  position: absolute;
+  border-left: orange solid 2px;
+  border-top: orange solid 2px;
+  border-bottom: orange solid 2px;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.yRemoteSelectionHead::after {
+  position: absolute;
+  content: ' ';
+  border: 3px solid orange;
+  border-radius: 4px;
+  left: -4px;
+  top: -5px;
 }
